<resources>
    <string name="app_name">tMusic</string>
    <string name="my_library">My Library</string>
    <string name="permission">Permission</string>
    <string name="music_needs_permission_">Music needs permission to run this feature</string>
    <string name="storage">Storage</string>
    <string name="to_access_audio_">To access audio content on your device</string>
    <string name="app_info">APP INFO</string>
    <string name="cancel">CANCEL</string>
    <string name="three_dots">⋮</string>
    <string name="shuffle_all">Shuffle all</string>
    <string name="no_song">No Music</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_next">Play next</string>
    <string name="add_to_play_queue">Add to play oldQueue</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="share">Share</string>
    <string name="delete_from_storage">Delete from storage</string>
    <string name="edit_music_info">Edit music info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="play_queue">Play Queue</string>
    <string name="playlist">Playlist</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="folders">Folders</string>
    <string name="genres">Genres</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
</resources>