<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/song_menu_playlist"
        android:title="@string/add_to_playlist"
        android:orderInCategory="100"/>

    <item android:id="@+id/song_menu_play_next"
        android:title="@string/play_next"
        android:orderInCategory="200" />

    <item android:id="@+id/song_menu_play_q"
        android:title="@string/add_to_play_queue"
        android:orderInCategory="300" />

    <item android:id="@+id/song_menu_fav"
        android:title="@string/add_to_favorites"
        android:orderInCategory="400" />

    <item android:id="@+id/song_menu_share"
        android:title="@string/share"
        android:orderInCategory="500" />

    <item android:id="@+id/song_menu_delete"
        android:title="@string/delete_from_storage"
        android:orderInCategory="600" />

    <item android:id="@+id/song_menu_artist"
        android:title="@string/artist"
        android:orderInCategory="700" />

    <item android:id="@+id/song_menu_album"
        android:title="@string/album"
        android:orderInCategory="800" />

    <item android:id="@+id/song_menu_edit"
        android:title="@string/edit_music_info"
        android:orderInCategory="900" />









</menu>